<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Activity string -->
    <string name="app_name">LaunchPadFlightController</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving The application!</string>
    <string name="connecting">Connecting&#8230;</string>
    <string name="connected_to">Connected to:</string>
    <string name="button">Connect to a device first</string>

    <!-- Options Menu -->
    <string name="action_connect">Connect</string>
    <string name="action_settings">Settings</string>

    <!--  DeviceListActivity -->
    <string name="scanning">Scanning for devices&#8230;</string>
    <string name="select_device">Select a device to connect</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="none_found">No devices found</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>

    <!-- Info Fragment -->
    <string name="manufacturer">by Kristian Sloth Lauszus</string>
    <string name="currentDraw">Current draw:</string>
    <string name="turningValue">Turning value:</string>
    <string name="battery">Battery level:</string>
    <string name="runTime">Run time:</string>

    <!-- Settings Fragment -->
    <string name="AngleKp">Angle Kp:</string>
    <string name="HeadingKp">Heading Kp:</string>
    <string name="AngleMaxInc">Max angle inclination:</string>
    <string name="AngleMaxIncSonar">Max angle inclination (sonar):</string>
    <string name="StickScalingRollPitch">Stick scaling (roll &amp; pitch):</string>
    <string name="StickScalingYaw">Stick scaling (yaw):</string>
    <string name="updateSettings">Press to update settings</string>

    <!-- PID Fragment -->
    <string name="Roll_pitch">Roll &amp; pitch</string>
    <string name="Kp">P:</string>
    <string name="Ki">I:</string>
    <string name="Kd">D:</string>
    <string name="IntLimit">Integration limit:</string>
    <string name="currentValues">Current Values:</string>
    <string name="adjustValues">Adjust Values:</string>
    <string name="updatePIDValues">Press to update PID values</string>
    <string name="sonarAltHold">Sonar</string>
    <string name="baroAltHold">Baro</string>

    <!-- Graph Fragment -->
    <string name="roll">Roll</string>
    <string name="pitch">Pitch</string>
    <string name="yaw">Yaw</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>

    <!-- Settings Dialog Fragment -->
    <string name="dialog_title">Settings</string>
    <string name="calibrateAccText">Press the button below to calibrate the accelerometer.</string>
    <string name="calibrateMagText">Press the button below to calibrate the magnetometer.</string>
    <string name="calibrateAccButtonText">Calibrate accelerometer</string>
    <string name="calibrateMagButtonText">Calibrate magnetometer</string>
    <string name="restoreText">Press the button below to restore the default configuration values.</string>
    <string name="restoreButtonText">Restore values</string>

</resources>
