<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/calibrateAcc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin" >

        <TextView
            android:id="@+id/calibrateAccText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calibrateAccText" />

        <Button
            android:id="@+id/calibrateAccButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/calibrateAccText"
            android:layout_margin="@dimen/margin"
            android:text="@string/button" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/calibrateMag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin" >

        <TextView
            android:id="@+id/calibrateMagText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calibrateMagText" />

        <Button
            android:id="@+id/calibrateMagButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/calibrateMagText"
            android:layout_margin="@dimen/margin"
            android:text="@string/button" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:layout_marginLeft="@dimen/margin"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginBottom="7dp" >

        <TextView
            android:id="@+id/restoreText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/restoreText" />

        <Button
            android:id="@+id/restoreButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/restoreText"
            android:layout_margin="@dimen/margin"
            android:text="@string/button" />
    </RelativeLayout>

</LinearLayout>