<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".LaunchPadFlightControllerActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Heading -->
        <TextView
            android:id="@+id/nameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ff33b5e5" />

        <TextView
            android:id="@+id/manufacturerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/nameText"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:text="@string/manufacturer"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <!-- Current draw -->
        <TextView
            android:id="@+id/currentText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/manufacturerText"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:text="@string/currentDraw"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/current"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/currentText"
            android:layout_toRightOf="@id/currentText"
            android:layout_marginLeft="@dimen/margin"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textIsSelectable="false" />

        <!-- Turning scale -->
        <TextView
            android:id="@+id/turningText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/currentText"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:text="@string/turningValue"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/turning"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/turningText"
            android:layout_toRightOf="@id/turningText"
            android:layout_marginLeft="@dimen/margin"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textIsSelectable="false" />

        <!-- Battery level -->
        <TextView
            android:id="@+id/batteryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/turningText"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:text="@string/battery"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/battery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/batteryText"
            android:layout_toRightOf="@id/batteryText"
            android:layout_marginLeft="@dimen/margin"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textIsSelectable="false" />

        <!-- Run time -->
        <TextView
            android:id="@+id/runTimeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/batteryText"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginLeft="@dimen/margin"
            android:text="@string/runTime"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/runTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/runTimeText"
            android:layout_toRightOf="@id/runTimeText"
            android:layout_marginLeft="@dimen/margin"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textIsSelectable="false" />

        <!-- PWM -->
        <com.cardiomood.android.controls.gauge.SpeedometerGauge
            android:id="@+id/speedometer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/runTimeText"
            android:layout_alignParentBottom="true"
            android:padding="8dp" />

    </RelativeLayout>

</ScrollView>